--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -13,13 +13,13 @@ This is important as we now have an initial assumption of possible predicates fo
 
 %\subsubsection{Limitations}
 In order to simplify the problem we have made the following restrictions on conditional effects we can learn:
-\begin{enumerate}[label=R.\arabic*]
+\begin{enumerate}[label=R\arabic*]
 	\item The environment must be fully observable.
 	\item The environment must contain a finite number of objects.
 	\item \label{rst:ca:no-disjuntive-conditionals} No disjunctive preconditions or effects. As a consequence of this restriction, no two conditionals can contain the same effect if their preconditions differ.
 	\item \label{rst:ca:no-multiple-effect} No multiples of the same effect.
 
-		  I.E. the effect $\forall_x p(x) \land q(x)$ is supported, but $\forall_{x, y} p(x, y) \land p(x, x) $ is not.
+		  I.e.\ the effect $\forall_x p(x) \land q(x)$ is supported, but $\forall_{x, y} p(x, y) \land p(x, x) $ is not.
 
 	\item \label{rst:ca:no-disjoint-preconditions} No disjoint preconditions.
 
@@ -234,7 +234,7 @@ Thus if both negative and positive preconditions are allowed a the same time use
             \right]&
     \end{align*}
 
-    According to theorem \ref{thm:ca:precondition-state} we can use $MoveLeft_{hyp}$ on $S_{before}$ and get $S_{after}$.
+    According to Theorem~\ref{thm:ca:precondition-state} we can use $MoveLeft_{hyp}$ on $S_{before}$ and get $S_{after}$.
     \begin{align*}
     &\gamma(S_{before},MoveLeft_{hyp}) =
         \left\{
@@ -301,7 +301,7 @@ This will work for removing entire predicates and only if the two sets use exact
 Thus this approach to modelling the unknown preconditions, which we used for non-conditional actions is incorrect.
 
 \begin{example}\label{ex:ca:light-on-2}
-    Following from Example \ref{ex:ca:light-on} we come to the second case in \figref{fig:ca:house-example}
+    Following from Example~\ref{ex:ca:light-on} we come to the second case in \figref{fig:ca:house-example}
     we see that we can turn on the light again but this time the sofa and the lamp has changed location and
     there is no table. From this we expand our knowledge by learning:
     \begin{itemize}
@@ -328,7 +328,7 @@ Thus this approach to modelling the unknown preconditions, which we used for non
 \subsubsection{A new model: Binding sets}
 As is evident our model of using set of predicates, that was used for modelling non-conditional effects, is not suitable when discussing conditional effects. As such we propose using Binding sets when modelling preconditions and effects for a conditional effect.
 
-As is evident our model of using set of predicates, that was used for modelling non-conditional effects, is not suitable when discussing conditional effects. In the following we will consider a another model for 
+From the discussion above, it is evident that the model used for preconditions of non-conditional actions are not sufficient for 
 
 \begin{definition}[Connection]\label{def:ca:connection}
     A connection is a sequence of pairs $\left( p, i \right)$
@@ -344,7 +344,7 @@ As is evident our model of using set of predicates, that was used for modelling 
 	Binding set $B$ is a theoretical set of all bindings which differentiate between bindings from different predicates, such that the name of predicates also determines whether or not two bindings are equal. Information pertaining to the name of the variable from which the binding exists does not conflict, therefore if two $B$ sets intersected but they had completely different naming of variables then the resulting set would still be as though their name matched.
 	For instance $\{p(x,x), q(x,y)\} \cap \{p(y,x), q(y,x)\} = \{p(x,y), q(x,z)\}$, notice that in both they have a binding on the first argument, and that binding is kept when they are intersected, even though the naming of the binding was different.
 \end{definition}
-The problem with binding sets is that they are difficult to model if there are multiples of the same predicate. As we have restriction \ref{rst:ca:no-multiple-effect} this is not a problem for effects, but for preconditions this proves to be a major problem. However, as we only intend to use binding sets to explain the problems we will assume that ambiguous predicates are always correctly handled when a set operation is used.
+The problem with binding sets is that they are difficult to model if there are multiples of the same predicate. As we have restriction~\ref{rst:ca:no-multiple-effect} this is not a problem for effects, but for preconditions this proves to be a major problem. However, as we only intend to use binding sets to explain the problems we will assume that ambiguous predicates are always correctly handled when a set operation is used.
 
 Using binding sets we are now capable of getting a correct intersection of two possible precondition sets and get their common possible preconditions. The possible preconditions also known as the unknown set $U_p$, can always be turned into a binding set $B_p$.
 And to get the remaining possible bindings between $B_p1$ and $B_p2$ and disproves all other bindings:
@@ -352,7 +352,7 @@ And to get the remaining possible bindings between $B_p1$ and $B_p2$ and disprov
 \begin{equation}
 B_p' = B_p1 \cap B_p2
 \end{equation}
-This will unlike Equation \ref{eq:unknownpredcondset} correctly ignore variable naming, and be able to partially remove some of the restrictions on the predicate I.E. removing bindings, solving the problem demonstrated in Example \ref{ex:ca:nonbinding-intersection-model}.
+This will unlike~\eqref{eq:unknownpredcondset} correctly ignore variable naming, and be able to partially remove some of the restrictions on the predicate I.E. removing bindings, solving the problem demonstrated in Example~\ref{ex:ca:nonbinding-intersection-model}.
 
 \subsubsection{Proving preconditions}
 Up until now we have only discussed limiting the number of possible preconditions (Unknown set) , however another aspect of learning is to determine what the actual preconditions are.
@@ -360,16 +360,16 @@ For non-conditional actions proving the preconditions of an action was a matter 
 
 \begin{theorem}\label{thm:minimum-one-binding}
 	If an action has been observed to produces an effect $E$, then if that effect does not occur in future transitions;
-	a minimum of one binding in a predicate must be a precondition for that condition effect. Assuming restriction \ref{rst:ca:no-disjoint-preconditions} holds.
+	a minimum of one binding in a predicate must be a precondition for that condition effect. Assuming restriction~\ref{rst:ca:no-disjoint-preconditions} holds.
 
-	\begin{proof}[\textbf{Proof by contradiction}] If there is less than one binding in the preconditions then that means there are zero bindings, if restriction \ref{rst:ca:no-disjoint-preconditions} holds then zero bindings means zero precondition. If there are zero preconditions then the effect would not have failed. Therefore there must be a minimum of one binding. \qedhere
+	\begin{proof}[\textbf{Proof by contradiction}] If there is less than one binding in the preconditions then that means there are zero bindings, if Restriction~\ref{rst:ca:no-disjoint-preconditions} holds then zero bindings means zero precondition. If there are zero preconditions then the effect would not have failed. Therefore there must be a minimum of one binding. \qedhere
 	\end{proof}
 \end{theorem}
 
 Initially we have a binding set $B_u$, which is our set of unproven preconditions for the effect of an action.
 If we then see that an effect does not occur in the state, the bindings in the prior state that did not produce that effect becomes the candidates of possible bindings $B_c$.
 
-Because of Theorem \ref{thm:minimum-one-binding} the following invariant holds:
+Because of Theorem~\ref{thm:minimum-one-binding} the following invariant holds:
 \begin{equation} \label{eq:binding_invariant}
 \left| \{b  \mid  b \in B_c \land b \in preconds_{bindings}(A)\} \right|  \ge 1
 \end{equation}
@@ -377,21 +377,18 @@ Because of Theorem \ref{thm:minimum-one-binding} the following invariant holds:
 
 Meaning that at least one of the bindings in this set is part of the bindings in the preconditions for the action $A$. As bindings that are not contained in $B_u$ is disproven, we can filter disproven candidates by:
 \begin{equation}
-B_c' = B_c \cap B_u
+    B_c' = B_c \cap B_u
 \end{equation}
-And thus if ever $|B_c| = 1$ then we know that it is a correct binding because of our Invariant \ref{eq:binding_invariant} and thus it is proven.
+And thus if ever $|B_c| = 1$ then we know that it is a correct binding because of our Invariant~\ref{eq:binding_invariant} and thus it is proven.
 
- \begin{example}\label{ex:ca:light-on-3}
- Consider the last case on \figref{fig:ca:house-example}. This case is identical
-to the first case except it does not have a lamp, thus we learn that:
-\begin{itemize}
-	\item A lamp is required for the effect to occur.
-\end{itemize}
-Up until this transition we have not seen proof that the lamp was a precondition even though it would be intuitive for a human that still
-does not mean that we can simply assume it could be that the person's action simply creates a
-lamp which it then proceeds to turn on, and it was the case that no
-lamp was created since it was present already.
-Interestingly like with non-conditional preconditions we require failed actions to determine the actual preconditions but unlike non-conditional preconditions an action can both succeed and fail in the same step. For instance the light was successfully turned on for the lamp but it was unsuccessful in turning on the light for the sofa.
+\begin{example}\label{ex:ca:light-on-3}
+    Consider the last case on \figref{fig:ca:house-example}. This case is identical to the first case except it does not have a lamp, thus we learn that:
+    \begin{itemize}
+        \item A lamp is required for the effect to occur.
+    \end{itemize}
+    Up until this transition we have not seen proof that the lamp was a precondition even though it would be intuitive for a human that still does not mean that we can simply assume it could be that the person's action simply creates a lamp which it then proceeds to turn on, and it was the case that no lamp was created since it was present already.
+    
+    Interestingly like with non-conditional preconditions we require failed actions to determine the actual preconditions but unlike non-conditional preconditions an action can both succeed and fail in the same step. For instance the light was successfully turned on for the lamp but it was unsuccessful in turning on the light for the sofa.
 
 \end{example}
 
